# psychotesting

./: .gitignore  docker-compose.yml
backend/: Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/psycho_forms/: admin.py  apps.py  models.py  serializers.py  views.py
backend/psycho_forms/migrations/: 0001_initial.py  0002_alter_answerselectable_question_and_more.py  0002_alter_organization_options_testdata_index_number_and_more.py  0003_rename_organisation_testdata_organization.py  0004_alter_organization_organization_name.py  0005_alter_organization_user.py  0006_testdata_introduction.py
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.vue  main.js  utils.js
client/src/api/: answerAPI.js  auth_api.js  questionsAPI.js  testDataApi.js
client/src/components/auth/: LoginView.vue  RegistrationView.vue
client/src/components/common/: CommonNav.vue  InternalServerError.vue  NotFound.vue  Spinner.vue
client/src/components/psychotesting/: AnswerItem.vue  OrganisationData.vue  QuestionItem.vue  TestItem.vue  TestList.vue  TestQuestions.vue  questionTypes.js
client/src/components/psychotesting/results/: TestResultAnswersIndex.vue  TestResultAnswers_1_0.vue  TestResultsAnswersCount.vue  TestResultsFullText.vue
client/src/router/: router.js
client/src/store/: index.js
client/src/store/modules/: auth.js
data/db/: ca.pem  client-cert.pem  public_key.pem  server-cert.pem
server/: pyproject.toml  requirements.txt
server/server/: settings.py  urls.py
(+5 files in other folders)
